Add shelljs dependency to backend

--- a/nin/backend/package.json
+++ b/nin/backend/package.json
@@ -14,6 +14,7 @@
     "mkdirp": "0.5.1",
     "readdir": "0.0.13",
     "rimraf": "2.5.2",
+    "shelljs": "0.7.0",
     "sockjs": "0.3.16",
     "walk": "2.3.9"
   }
