Shift paradigm from layers to nodes
This commit shifts the central paradigm of nin from being a layer-based
system to being a node-based system. Not all features have been ported
over to the new system, although it is certainly complete enough to be
used to make demos. Hopefully we are willing to merge this sooner rather
than later, and we can then later fix the rest of the features as they
are needed.

* Overview

Before, a demo in nin would consist of several layers in an ordered
list. Each layer would have a start time and end time, and each
layer's update and render methods would be called with the usual
update/render call semantics while demo time was within a layer's start
and end times. Each layer exposed an EffectComposer pass, and all passes
for active layers were chained together in a top-to-bottom such that the
next layer could optionally access the rendered data of the previous
layer.

Now, a demo in nin consists of several nodes in a graph. Nodes do not
have start times or end times. Rather, the graph is traversed from a
designated root node in order call update and render for each of the
reachable nodes. A node may enable or disable their inputs, which serves
as temporary graph modification in order to "connect and disconnect"
different nodes at different times in the demo. This is the spiritual
replacement of start times and end times from the layer system.  The big
advantage of the new node-based system over the old layer system  is
that it is now easier to create more advanced multi-pass rendering
pipelines.

* Nodes and the graph

Nodes have different types, and all nodes inherit from the base
NIN.Node. A node type may declare a number of named and typed inputs and
outputs. Nodes may produce data and store it in their outputs. Connected
nodes may then read that same data from their inputs. The directed graph
of connections from node outputs to node inputs may not contain cycles.

The graph is stored in res/graph.json, which is analogous to the old


--- a/nin/frontend/bower.json
+++ b/nin/frontend/bower.json
@@ -12,6 +12,9 @@
     "angular-ui": "~0.4.0",
     "angular-bootstrap": "0.11.0",
     "angular-ui-layout": "~0.0.0",
-    "jquery-ui": "~1.10.4"
+    "jquery-ui": "~1.10.4",
+    "svg-pan-zoom": "^3.2.9",
+    "svg.js": "^2.3.2",
+    "svg.draggable.js": "^2.2.0"
   }
 }
